# seo-indexer

./: Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
.planning/: plan.md  spec.md
src/: bulk.rs  error.rs  main.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs  schema.rs
src/indexers/: google.rs  indexnow.rs  mod.rs  ping.rs
src/parser/: mod.rs  sitemap.rs
src/storage/: mod.rs  models.rs
src/web/: mod.rs  routes.rs  templates.rs
templates/: base.html  history.html  index.html  result.html  submit.html
