[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
description = "White-hat SEO link indexer CLI — submit URLs to IndexNow, Google Indexing API, and ping services"
license = "MIT"
repository = "https://github.com/fauzanazz/seo-indexer"
readme = "README.md"
keywords = ["seo", "indexing", "cli", "indexnow", "google"]
categories = ["command-line-utilities", "web-programming"]
authors = ["dev@legali.ai"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
url = "2"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
jsonwebtoken = "9"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
quick-xml = "0.31"
axum = "0.7"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tower = "0.4"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
